# hard75

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  hard75-design.md  pyproject.toml  requirements.txt
backend/: Dockerfile  requirements.txt
backend/scripts/: init-db.sql  seed-dev.sql
backend/src/: __init__.py  main.py
backend/src/agent/: extractor.py  gmail.py  merger.py
backend/src/api/: pending.py  users.py  workouts.py
backend/src/auth/: oauth.py  session.py
backend/src/pages/: routes.py
backend/src/partials/: __init__.py  routes.py
backend/src/scheduler/: summary.py
backend/src/templates/email/: unknown_sender.html
backend/src/templates/pages/: admin.html  (+2 more)
backend/static/js/: charts.js
backend/tests/: conftest.py  test_extractor.py
scripts/: generate_gmail_token.py  init-db.sql
src/: config.py  db.py  main.py  storage.py
src/agent/: __init__.py  bootstrap.py  extractor.py  gmail.py  runner.py
src/api/: days.py  deps.py  meals.py  users.py
src/pages/: routes.py
src/templates/email/: not_approved.html  summary.html
src/templates/layouts/: base.html
src/templates/pages/: admin.html  admin_user.html
src/templates/partials/: checklist.html  nutrition.html  streak.html  workout_card.html
static/css/: styles.css
tests/: test_api_days.py  test_api_workouts.py  test_merger.py
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/api/: client.ts
ui/src/components/: Layout.tsx
ui/src/context/: AuthContext.tsx
ui/src/pages/: Admin.tsx  Dashboard.tsx  Login.tsx
ui/src/types/: index.ts
(+2 files in other folders)
